--- a/app/src/main/res/layout/activity_attraction.xml
+++ b/app/src/main/res/layout/activity_attraction.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,108 +9,71 @@
     <ListView
         android:id="@+id/lvAttractions"
         android:layout_width="match_parent"
-        android:layout_height="632dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
-        android:layout_alignParentLeft="true">
+        android:layout_height="631dp">
 
     </ListView>
 
-    <TextView
-        android:id="@+id/textView12"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="87dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:background="#DBF6E9" />
+        android:layout_gravity="bottom"
+        android:layout_marginTop="1dp"
+        app:cardBackgroundColor="#DBF6E9">
 
-    <TextView
-        android:id="@+id/tvHomeAttraction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="37dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginBottom="1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Home"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/ivHomeAttraction"
+            android:layout_width="70dp"
+            android:layout_height="56dp"
+            android:layout_gravity="left|top"
+            android:src="@drawable/home" />
 
-    <ImageView
-        android:id="@+id/ivFavourites_AttractionPage"
-        android:layout_width="60dp"
-        android:layout_height="114dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="181dp"
-        android:layout_marginRight="181dp"
-        android:layout_marginBottom="-6dp"
-        app:srcCompat="@drawable/favourites" />
+        <TextView
+            android:id="@+id/tvHomeAttraction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:text="Home"
+            android:textColor="#31326F"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="bottom"
+            android:textSize="20dp"/>
 
-    <TextView
-        android:id="@+id/tvFavourites_AttractionPage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="177dp"
-        android:layout_marginLeft="177dp"
-        android:layout_marginBottom="1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Review"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/ivFavourites_AttractionPage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|top"
+            android:src="@drawable/favourites"/>
+
+        <TextView
+            android:id="@+id/tvFavourites_AttractionPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:text="Review"
+            android:textColor="#31326F"
+            android:layout_gravity="center|bottom"
+            android:textSize="20dp"  />
 
 
-    <ImageView
-        android:id="@+id/ivSetting_AttractionPage"
-        android:layout_width="56dp"
-        android:layout_height="144dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
-        android:layout_marginBottom="-23dp"
-        app:srcCompat="@drawable/setting" />
+        <ImageView
+            android:id="@+id/ivSetting_AttractionPage"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right|top"
+            android:src="@drawable/setting" />
 
-    <TextView
-        android:id="@+id/tvSettingAttraction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="321dp"
-        android:layout_marginLeft="321dp"
-        android:layout_marginBottom="-1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Setting"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/tvSettingAttraction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:fontFamily="@font/baloo"
+            android:text="Setting"
+            android:textColor="#31326F"
+            android:textSize="20dp" />
+    </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/ivHomeAttraction"
-        android:layout_width="59dp"
-        android:layout_height="42dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="681dp"
-        android:layout_marginBottom="8dp"
-        app:srcCompat="@drawable/home" />
 
-</RelativeLayout>
+
+</LinearLayout>
