--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,35 +64,29 @@
             android:textColor="@color/white" />
     </LinearLayout>
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="87dp"
         android:layout_gravity="bottom"
-        android:layout_marginTop="168dp">
-
-        <TextView
-
-            android:layout_width="match_parent"
-            android:layout_height="108dp"
-            android:background="#DBF6E9"
-            android:text=""
-            android:textColor="@color/white" />
+        android:layout_marginTop="120dp"
+        app:cardBackgroundColor="#DBF6E9">
 
         <ImageView
             android:id="@+id/ivHome_LoginPage"
-            android:layout_width="98dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/home" />
+            android:layout_width="70dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center|top"
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="center"
+            android:fontFamily="@font/baloo"
             android:text="Home"
-            android:textSize="20dp" />
+            android:textColor="#31326F"
+            android:layout_gravity="bottom|center"
+            android:textSize="20dp"/>
 
-    </FrameLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
