--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,33 +49,29 @@
         android:layout_marginTop="30dp"
         android:text="Register" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="105dp"
-        android:layout_gravity="bottom">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="108dp"
-            android:background="#DBF6E9"
-            android:text=""
-            android:textColor="@color/white" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="87dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="52dp"
+        app:cardBackgroundColor="#DBF6E9">
 
         <ImageView
             android:id="@+id/ivHome_RegisterPage"
-            android:layout_width="98dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/home" />
+            android:layout_width="70dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center|top"
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="center"
-            android:textSize="20dp"
-            android:text="Home" />
+            android:fontFamily="@font/baloo"
+            android:text="Home"
+            android:textColor="#31326F"
+            android:layout_gravity="bottom|center"
+            android:textSize="20dp"/>
 
-    </FrameLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
