--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -43,68 +43,68 @@
         android:layout_marginTop="20dp"
         android:text="Delete Account" />
 
-    <FrameLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
-        android:layout_gravity="bottom">
+        android:layout_height="87dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="285dp"
+        app:cardBackgroundColor="#DBF6E9">
 
-        <TextView
-
-            android:layout_width="match_parent"
-            android:layout_height="108dp"
-            android:background="#DBF6E9"
-            android:text=""
-            android:textColor="@color/white" />
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="108dp"-->
+<!--            android:background="#DBF6E9"-->
+<!--            android:text=""-->
+<!--            android:textColor="@color/white" />-->
 
         <ImageView
             android:id="@+id/ivHome_SettingPage"
-            android:layout_width="98dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/home" />
+            android:layout_width="70dp"
+            android:layout_height="56dp"
+            android:layout_gravity="left|top"
+            android:src="@drawable/home" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="70dp"
-            android:textSize="20dp"
-            android:text="Home" />
+            android:fontFamily="@font/baloo"
+            android:text="Home"
+            android:textColor="#31326F"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="bottom"
+            android:textSize="20dp"/>
+
 
         <ImageView
             android:id="@+id/ivReview_SettingPage"
-            android:layout_width="98dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/favourites" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|top"
+            android:src="@drawable/favourites"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="170dp"
-            android:layout_marginTop="70dp"
+            android:fontFamily="@font/baloo"
             android:text="Review"
-            android:textSize="20dp" />
+            android:textColor="#31326F"
+            android:layout_gravity="center|bottom"
+            android:textSize="20dp"  />
 
         <ImageView
             android:id="@+id/ivSetting_SettingPage"
-            android:layout_width="98dp"
+            android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="280dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/setting" />
-
+            android:layout_gravity="right|top"
+            android:src="@drawable/setting" />
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-            android:layout_marginTop="70dp"
-            android:textSize="20dp"
-            android:text="Setting" />
+            android:layout_gravity="right|bottom"
+            android:fontFamily="@font/baloo"
+            android:text="Setting"
+            android:textColor="#31326F"
+            android:textSize="20dp" />
 
-    </FrameLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
