--- a/app/src/main/res/layout/activity_staycations.xml
+++ b/app/src/main/res/layout/activity_staycations.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,106 +9,73 @@
     <ListView
         android:id="@+id/lvStaycations"
         android:layout_width="match_parent"
-        android:layout_height="632dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
-        android:layout_alignParentLeft="true" >
+        android:layout_height="631dp">>
 
     </ListView>
 
-    <TextView
-        android:id="@+id/textview15"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="87dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:background="#DBF6E9" />
+        android:layout_gravity="bottom"
+        android:layout_marginTop="1dp"
+        app:cardBackgroundColor="#DBF6E9">
 
-    <TextView
-        android:id="@+id/tvHomeSC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="37dp"
-        android:layout_marginLeft="37dp"
-        android:layout_marginBottom="1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Home"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/ivHome_StaycationPage"
+            android:layout_width="70dp"
+            android:layout_height="56dp"
+            android:layout_gravity="left|top"
+            android:src="@drawable/home" />
 
-    <ImageView
-        android:id="@+id/ivReview_StaycationPage"
-        android:layout_width="60dp"
-        android:layout_height="114dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="181dp"
-        android:layout_marginRight="181dp"
-        android:layout_marginBottom="-6dp"
-        app:srcCompat="@drawable/location" />
+        <TextView
+            android:id="@+id/tvHomeSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:text="Home"
+            android:textColor="#31326F"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="bottom"
+            android:textSize="20dp"/>
 
-    <TextView
-        android:id="@+id/tvCountrySC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="177dp"
-        android:layout_marginLeft="177dp"
-        android:layout_marginBottom="1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Review"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/ivReview_StaycationPage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|top"
+            android:src="@drawable/favourites"/>
 
-    <ImageView
-        android:id="@+id/ivSetting_StaycationPage"
-        android:layout_width="56dp"
-        android:layout_height="144dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
-        android:layout_marginBottom="-23dp"
-        app:srcCompat="@drawable/setting" />
+        <TextView
+            android:id="@+id/tvCountrySC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:text="Review"
+            android:textColor="#31326F"
+            android:layout_gravity="center|bottom"
+            android:textSize="20dp"  />
 
-    <TextView
-        android:id="@+id/tvSettingSC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="321dp"
-        android:layout_marginLeft="321dp"
-        android:layout_marginBottom="-1dp"
-        android:fontFamily="@font/baloo"
-        android:text="Setting"
-        android:textColor="#31326F"
-        android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/ivSetting_StaycationPage"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right|top"
+            android:src="@drawable/setting" />
 
-    <ImageView
-        android:id="@+id/ivHome_StaycationPage"
-        android:layout_width="90dp"
-        android:layout_height="55dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="23dp"
-        android:layout_marginTop="700dp"
-        android:layout_marginBottom="30dp"
-        app:srcCompat="@drawable/home" />
+        <TextView
+            android:id="@+id/tvSettingSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:fontFamily="@font/baloo"
+            android:text="Setting"
+            android:textColor="#31326F"></TextView>
 
-</RelativeLayout>
+    </androidx.cardview.widget.CardView>
+<!--    <TextView-->
+<!--        android:id="@+id/textview15"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="87dp"-->
+<!--        android:background="#DBF6E9" />-->
+
+</LinearLayout>
