--- a/app/src/main/res/layout/attraction_row.xml
+++ b/app/src/main/res/layout/attraction_row.xml
@@ -1,66 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C0E1DB">
+    android:background="#C0E1DB"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvAttractionContent"
-        android:layout_width="364dp"
-        android:layout_height="364dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="119dp"
-        android:background="@drawable/square" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="320dp"
+        android:layout_height="350dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="25dp"
+        android:layout_marginTop="20dp">
 
-    <ImageView
-        android:id="@+id/ivAttractionImage"
-        android:layout_width="241dp"
-        android:layout_height="145dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="123dp"
-        android:layout_weight="1"
-        android:background="@drawable/image_radius" />
+        <ImageView
+            android:id="@+id/ivAttractionImage"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"/>
 
-    <ImageView
-        android:id="@+id/ivRatingStar"
-        android:layout_width="289dp"
-        android:layout_height="60dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="369dp"
-        android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/ivRatingStar"
+            android:layout_width="289dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:id="@+id/tvAttractionName"
-        android:layout_width="322dp"
-        android:layout_height="37dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="285dp"
-        android:gravity="center|center_vertical"
-        android:text="name"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvAttractionName"
+            android:layout_width="322dp"
+            android:layout_height="37dp"
+            android:text="name"
+            android:textColor="#31326F"
+            android:layout_marginTop="280dp"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/tvAttractionSite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="450dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
-        android:text="Visit Site"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvAttractionSite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Visit Site"
+            android:textColor="#31326F"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="bottom|right"/>
+
+    </androidx.cardview.widget.CardView>
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvAttractionContent"-->
+    <!--        android:layout_width="364dp"-->
+    <!--        android:layout_height="364dp"-->
+    <!--        android:layout_alignParentStart="true"-->
+    <!--        android:layout_alignParentLeft="true"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginStart="22dp"-->
+    <!--        android:layout_marginLeft="22dp"-->
+    <!--        android:layout_marginTop="119dp"-->
+    <!--        android:background="@drawable/square" />-->
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/ivAttractionImage"-->
+    <!--        android:layout_width="241dp"-->
+    <!--        android:layout_height="145dp"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="123dp"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:background="@drawable/image_radius" />-->
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/ivRatingStar"-->
+    <!--        android:layout_width="289dp"-->
+    <!--        android:layout_height="60dp"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_centerInParent="true"-->
+    <!--        android:layout_marginTop="369dp"-->
+    <!--        android:layout_weight="1" />-->
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvAttractionName"-->
+    <!--        android:layout_width="322dp"-->
+    <!--        android:layout_height="37dp"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="285dp"-->
+    <!--        android:gravity="center|center_vertical"-->
+    <!--        android:text="name"-->
+    <!--        android:textColor="#31326F" />-->
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/tvAttractionSite"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:layout_alignParentEnd="true"-->
+    <!--        android:layout_alignParentRight="true"-->
+    <!--        android:layout_marginTop="450dp"-->
+    <!--        android:layout_marginEnd="42dp"-->
+    <!--        android:layout_marginRight="42dp"-->
+    <!--        android:text="Visit Site"-->
+    <!--        android:textColor="#31326F" />-->
 
 
-</RelativeLayout>
+</LinearLayout>
