--- a/app/src/main/res/layout/dining_row.xml
+++ b/app/src/main/res/layout/dining_row.xml
@@ -1,79 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C0E1DB">
+    android:background="#C0E1DB"
+    android:orientation="vertical">
 
-    <TextView
-         android:id="@+id/tvDiningContent"
-        android:layout_width="364dp"
-        android:layout_height="364dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="119dp"
-        android:background="@drawable/square" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="320dp"
+        android:layout_height="350dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="25dp"
+        android:layout_marginTop="20dp">
 
-    <ImageView
-        android:id="@+id/ivDining"
-        android:layout_width="241dp"
-        android:layout_height="145dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="123dp"
-        android:layout_weight="1"
-        android:background="@drawable/image_radius"
-        />
+        <ImageView
+            android:id="@+id/ivDining"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@+id/tvRestaurant"
-        android:layout_width="322dp"
-        android:layout_height="37dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="285dp"
-        android:gravity="center|center_vertical"
-        android:text="name"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvRestaurant"
+            android:layout_width="322dp"
+            android:layout_height="37dp"
+            android:text="restaurant name"
+            android:textColor="#31326F"
+            android:layout_marginTop="200dp"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/tvDiningSite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="450dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
-        android:text="Visit Site"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvDiningSite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Visit Site"
+            android:textColor="#31326F"
+            android:layout_marginRight="20dp"
+            android:layout_gravity="bottom|right"/>
 
-    <TextView
-        android:id="@+id/tvLocations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="342dp"
-        android:text="TextView"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvLocations"
+            android:layout_width="322dp"
+            android:layout_height="37dp"
+            android:text="locations"
+            android:textColor="#31326F"
+            android:layout_marginTop="240dp"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/tvCategory"
-        android:layout_width="173dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="377dp"
-        android:gravity="center"
-        android:text="TextView"
-        android:textColor="#31326F" />
+        <TextView
+            android:id="@+id/tvCategory"
+            android:layout_width="322dp"
+            android:layout_height="37dp"
+            android:text="name"
+            android:textColor="#31326F"
+            android:layout_marginTop="280dp"
+            android:textAlignment="center"
+            android:gravity="center_horizontal" />
+    </androidx.cardview.widget.CardView>
+<!--    <TextView-->
+<!--        android:id="@+id/tvDiningContent"-->
+<!--        android:layout_width="364dp"-->
+<!--        android:layout_height="364dp"-->
+<!--        android:layout_marginStart="22dp"-->
+<!--        android:layout_marginLeft="22dp"-->
+<!--        android:layout_marginTop="119dp"-->
+<!--        android:background="@drawable/square" />-->
 
 
-</RelativeLayout>
+</LinearLayout>
